ops/tests/compile_fail/mem_slices.stderr
error: custom attribute panicked
  --> tests/compile_fail/mem_slices.rs:10:1
   |
10 | #[op]
   | ^^^^^
   |
   = help: message: Memory slices are not allowed in async ops

error: custom attribute panicked
  --> tests/compile_fail/mem_slices.rs:15:1
   |
15 | #[op]
   | ^^^^^
   |
   = help: message: Memory slices are not allowed in async ops
